add develop enviroment

--- a/omicx/resources/autocall-report/appsettings.json
+++ b/omicx/resources/autocall-report/appsettings.json
@@ -144,7 +144,7 @@
       "DialingStatusAndAgentStatusReportRequest": "CRM.Report.DialingStatusAndAgentStatusReportRequest"
   },
   "MongoDb": {
-    "ConnectionString": "mongodb://root:Metech123@report-db:27017/AutocallAudit",
+    "ConnectionString": "mongodb://root:Abcd12345@report-db:27017/AutocallAudit?authSource=admin",
     "DatabaseName": "AutocallAudit",
     "CollectionNames": {
       "EventStreaming": "EventStreaming",
@@ -173,6 +173,6 @@
       "YearlyContactImportStatsReport": "YearlyContactImportStatsReport"
     }
   },
-  "RecordingPrefix": "https://ps1.omicx.vn/file/",
+  "RecordingPrefix": "https://crm-dev-v2.metechvn.com/file/",
   "ExportExcelPath": "ExportExcel"
 }
