--- a/omicx/resources/chat-statistics/appsettings.json
+++ b/omicx/resources/chat-statistics/appsettings.json
@@ -100,9 +100,9 @@
     }
   },
   "MongoDb": {
-    "ConnectionString": "mongodb://root:Metech123@report-db:27017/AutocallAudit",
+    "ConnectionString": "mongodb://root:Abcd12345@report-db:27017/AutocallAudit?authSource=admin",
     "DatabaseName": "AutocallAudit"
   },
-  "RecordingPrefix": "https://ps1.omicx.vn/file/",
+  "RecordingPrefix": "https://crm-dev-v2.metechvn.com/file/",
   "ExportExcelPath": "ExportExcel"
 }
