--- a/omicx/resources/domain-registry/appsettings.json
+++ b/omicx/resources/domain-registry/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Data Source=crm-db;Initial Catalog=OMICXDomainRegistry;User ID=crmdbadmin;Password=OmicxCrm2023;Persist Security Info=True;Trust Server Certificate=true"
+    "Default": "Data Source=crm-db;Initial Catalog=OMICXDomainRegistry;User ID=dbadmin;Password=123456aA@;Persist Security Info=True;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
