--- a/omicx/resources/email-notification/appsettings.json
+++ b/omicx/resources/email-notification/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AllowedHosts": "*",
-  "DomainName": "https://ps1.omicx.vn",
+  "DomainName": "https://crm-dev-v2.metechvn.com",
   "kafka": {
     "admin": {
       "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
