--- a/omicx/resources/job-common/appsettings.json
+++ b/omicx/resources/job-common/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=600;"
+      "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=600;"
     },
     "App": {
       "ServerRootAddress": "http://omicx-job-common-9703-service:9703/",
@@ -9,7 +9,7 @@
       "DefaultTenant": 4,
       "SocketIOAddress": "http://omicx-socket-server-3000-service:3000/",
       "ReportServiceAddress": "http://172.16.86.94:7071/",
-      "DomainName": "ps1.omicx.vn",
+      "DomainName": "crm-dev-v2.metechvn.com",
       "SocialConfigurationLocal": "http://omicx-social-configurations-7980-service:7980/api/v1/",
       "ExportExcelPath": "ExportExcel"
     },
