--- a/omicx/resources/nginx-conf/nginx.conf
+++ b/omicx/resources/nginx-conf/nginx.conf
@@ -17,7 +17,7 @@ events {
 
 
 http {
-    resolver coredns.kube-system.svc.cluster.local ipv6=off;
+    resolver kube-dns.kube-system.svc.cluster.local ipv6=off;
     lua_load_resty_core off;
     include       mime.types;
     default_type  application/octet-stream;
