--- a/omicx/resources/web-be/appconfig.production.json
+++ b/omicx/resources/web-be/appconfig.production.json
@@ -2,22 +2,22 @@
     "project": 0,
     "f88TenantId": 4,
     "f88SsoHost": "https://sso-ida.f88.co",  
-    "remoteServiceBaseUrl": "https://ps1.omicx.vn",
-    "appBaseUrl": "https://ps1.omicx.vn",
-    "acdAsmVoiceUrl": "https://ps1.omicx.vn/asm",
-    "campaignPlanningUrl": "https://ps1.omicx.vn/campaign-planning",
-    "channelManagerServiceBaseUrl": "https://ps1.omicx.vn/channel-manager",
-    "channelGWBaseUrl": "https://ps1.omicx.vn/channelgw",
-    "reportBaseUrl": "https://ps1.omicx.vn/reporting",
-    "audioUrl": "https://ps1.omicx.vn/static/recording/",
-    "audioSurveyUrl": "https://ps1.omicx.vn/static/survey/",
-    "freeSwitchBackend": "https://ps1.omicx.vn/fsapi",
-    "avatarUrl": "https://ps1.omicx.vn/static/image/",
-    "fileUrl": "https://ps1.omicx.vn/static",
-    "fileImportUrl": "https://ps1.omicx.vn/static/files_upload/",
-    "fileExportUrl": "https://ps1.omicx.vn/static/jobfile/",
-    "socialUrl": "https://ps1.omicx.vn/static/socials/",
-    "mediaUrl": "https://ps1.omicx.vn",
+    "remoteServiceBaseUrl": "https://crm-dev-v2.metechvn.com",
+    "appBaseUrl": "https://crm-dev-v2.metechvn.com",
+    "acdAsmVoiceUrl": "https://crm-dev-v2.metechvn.com/asm",
+    "campaignPlanningUrl": "https://crm-dev-v2.metechvn.com/campaign-planning",
+    "channelManagerServiceBaseUrl": "https://crm-dev-v2.metechvn.com/channel-manager",
+    "channelGWBaseUrl": "https://crm-dev-v2.metechvn.com/channelgw",
+    "reportBaseUrl": "https://crm-dev-v2.metechvn.com/reporting",
+    "audioUrl": "https://crm-dev-v2.metechvn.com/static/recording/",
+    "audioSurveyUrl": "https://crm-dev-v2.metechvn.com/static/survey/",
+    "freeSwitchBackend": "https://crm-dev-v2.metechvn.com/fsapi",
+    "avatarUrl": "https://crm-dev-v2.metechvn.com/static/image/",
+    "fileUrl": "https://crm-dev-v2.metechvn.com/static",
+    "fileImportUrl": "https://crm-dev-v2.metechvn.com/static/files_upload/",
+    "fileExportUrl": "https://crm-dev-v2.metechvn.com/static/jobfile/",
+    "socialUrl": "https://crm-dev-v2.metechvn.com/static/socials/",
+    "mediaUrl": "https://crm-dev-v2.metechvn.com",
     "telesaleTransferNumber": "179004",
     "cskhTransferNumber": "179005",
     "outboundSurveyNumber": "40600",
@@ -26,16 +26,16 @@
     "fsSocketServer": "wss://proxy.metechvn.com:7443",
     "fsSipDomain": "voice.metechvn.com",
     "fsSipPort": 5090,
-    "pbxIntegrationUrl": "https://ps1.omicx.vn/fsapi",
-    "productCatalogUrl": "https://ps1.omicx.vn/catalog",
+    "pbxIntegrationUrl": "https://crm-dev-v2.metechvn.com/fsapi",
+    "productCatalogUrl": "https://crm-dev-v2.metechvn.com/catalog",
     "appIdFB": "811725996448810",
-    "acdAsmChatUrl": "https://ps1.omicx.vn/acd-asm-chat",
-    "acdAsmEmailUrl": "https://ps1.omicx.vn/acd-asm-email",
-    "acdBackendServiceBaseUrl": "https://ps1.omicx.vn/chat-acd",
+    "acdAsmChatUrl": "https://crm-dev-v2.metechvn.com/acd-asm-chat",
+    "acdAsmEmailUrl": "https://crm-dev-v2.metechvn.com/acd-asm-email",
+    "acdBackendServiceBaseUrl": "https://crm-dev-v2.metechvn.com/chat-acd",
     "recordingS3BaseUrl": "https://api-ld-pn.f88.co:6891/File/SignUrl",
     "phoneNumberRegex": "^(0|1|84|\\+84)(\\d{9,12})$",
-	"prefixAudioUrl": "https://ps1.omicx.vn/file/",
-  	"chatStatisticsUrl": "https://ps1.omicx.vn",
+	"prefixAudioUrl": "https://crm-dev-v2.metechvn.com/file/",
+  	"chatStatisticsUrl": "https://crm-dev-v2.metechvn.com",
     "tenancy": {
       "multitenancy": true,
       "defaultTenancy": ""
@@ -47,7 +47,7 @@
     },
     "sipJsLogLevel": "error",
     "socketIoConfig": {
-      "url": "https://ps1.omicx.vn",
+      "url": "https://crm-dev-v2.metechvn.com",
       "options": {
         "path": "/socket-server",
         "autoConnect": false,
@@ -58,7 +58,7 @@
       }
     },
     "socketIoCallConfig": {
-      "url": "https://ps1.omicx.vn",
+      "url": "https://crm-dev-v2.metechvn.com",
       "options": {
         "path": "/call-server",
         "autoConnect": false,
