--- a/omicx/resources/web-be/appsettings.json
+++ b/omicx/resources/web-be/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True"
+    "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True"
   },
   "App": {
     "SyncConnectionString": false,
@@ -9,8 +9,8 @@
     "FreeSwitchBaseUrl": "https://ai.metechvn.com/",
     "FreeSwitchManagerApi": "http://omicx-cci-5580-service:5580",
     "ServerRootAddress": "http://172.16.16.110:21021/",
-    "ClientRootAddress": "https://ps1.omicx.vn/",
-    "CorsOrigins": "https://ps1.omicx.vn,http://localhost:8080,http://localhost:8081,http://localhost:3000",
+    "ClientRootAddress": "https://crm-dev-v2.metechvn.com/",
+    "CorsOrigins": "https://crm-dev-v2.metechvn.com,http://localhost:8080,http://localhost:8081,http://localhost:3000",
     "RootPathChatWidget": "http://172.16.88.109:8080/js/",
     "SocketIO": "http://omicx-socket-server-3000-service:3000/",
     "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
@@ -18,7 +18,7 @@
     "RecordingUrl": "http://172.16.88.109:9600/",
     "FileUrl": "http://172.16.88.109:8080/",
     "UrlAudio": "http://172.16.88.109:8080/recording/",
-    "PrefixAudioUrl": "https://ps1.omicx.vn/file/",
+    "PrefixAudioUrl": "https://crm-dev-v2.metechvn.com/file/",
     "ReportingService": "http://172.16.86.94:7071/",
     "ACDBackendUrl": "http://omicx-acd-backend-3006-service:3006/",
     "ChatManagerLocal": "http://omicx-channel-manager-5001-service:5001/",
@@ -29,7 +29,7 @@
     "ExportExcelPath": "ExportExcel",
     "SocialConfigurationLocal": "http://omicx-social-configurations-7980-service:7980/api/v1",
     "UrlAcdAsmEmail": "http://omicx-acd-asm-email-7990-service:7990/",
-    "DomainName": "ps1.omicx.vn"
+    "DomainName": "crm-dev-v2.metechvn.com"
   },
   "Conversation": {
     "AutoCloseInMinutes": 1440
@@ -75,8 +75,8 @@
       "VNP_TMNCODE": "G1SPD20Q",
       "VNP_HASH_SECRET": "RDFCTOOLCKPINSPNEGIAXXDXBBLDSRGG",
       "VNP_URL": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
-      "VNP_RETURN_URL": "https://ps1.omicx.vn/tenant/vnpay-return",
-      "VNP_REDIRECT": "https://ps1.omicx.vn/tenant/register/"
+      "VNP_RETURN_URL": "https://crm-dev-v2.metechvn.com/tenant/vnpay-return",
+      "VNP_REDIRECT": "https://crm-dev-v2.metechvn.com/tenant/register/"
     }
   },
   "kafka": {
