--- a/omicx/resources/web-fe/nginx.conf
+++ b/omicx/resources/web-fe/nginx.conf
@@ -14,12 +14,12 @@ server {
     }
 
     location /config {
-      resolver  coredns.kube-system.svc.cluster.local;
+      resolver  kube-dns.kube-system.svc.cluster.local;
       proxy_pass http://omicx-web-be-9701-service:9701;
     }
 
     location /api {
-      resolver  coredns.kube-system.svc.cluster.local;
+      resolver  kube-dns.kube-system.svc.cluster.local;
       proxy_pass http://omicx-web-be-9701-service:9701;
     }
 }
