--- a/omicx/resources/authorization-service/appsettings.json
+++ b/omicx/resources/authorization-service/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-      "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True;TrustServerCertificate=True;"
+      "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True;TrustServerCertificate=True;"
     },
     "App": {
       "ServerRootAddress": "http://localhost:21021/",
