--- a/omicx/resources/job-email/appsettings.json
+++ b/omicx/resources/job-email/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=600;"
+    "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=600;"
   },
   "App": {
     "ServerRootAddress": "http://omicx-job-email-9903-service:9903/",
