--- a/omicx/resources/nginx/crm-dev.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev.metechvn.com.conf
@@ -1,13 +1,13 @@
 upstream web_back_host  {
-        server omicx-web-be-9701-service.default.svc.cluster.local:9701 weight=5;
+        server omicx-web-be-9701-service.omicx-v2-dev.svc.cluster.local:9701 weight=5;
 }
 
 upstream web_front_host {
-        server omicx-web-fe-80-service.default.svc.cluster.local:80 weight=5;
+        server omicx-web-fe-80-service.omicx-v2-dev.svc.cluster.local:80 weight=5;
 }
 
 upstream author_service_host  {
-        server omicx-authorization-service-21021-service.default.svc.cluster.local:21021 weight=5;
+        server omicx-authorization-service-21021-service.omicx-v2-dev.svc.cluster.local:21021 weight=5;
 }
 
 server                  {
@@ -20,14 +20,14 @@ server                  {
 
         location /AbpUserConfiguration {
                 client_max_body_size 100M;
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 proxy_buffers 16 16k;  
                 proxy_buffer_size 16k;
                 proxy_pass              http://web_back_host;
         }
 
          location /api/TokenAuth/Authenticate {
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 client_max_body_size 100M;
                 proxy_http_version 1.1;
                 proxy_pass_request_headers      on;
@@ -40,7 +40,7 @@ server                  {
                 proxy_pass http://author_service_host$request_uri;
         }
          location /api/TokenAuth/GetToken {
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 client_max_body_size 100M;
                 proxy_http_version 1.1;
                 proxy_pass_request_headers      on;
@@ -53,7 +53,7 @@ server                  {
                 proxy_pass http://author_service_host$request_uri;
         }
         location /api/TokenAuth/F88Authenticate {
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 client_max_body_size 100M;
                 proxy_pass http://author_service_host$request_uri;
         }
@@ -61,51 +61,51 @@ server                  {
 
        location /campaign-planning {
                 client_max_body_size 100M;
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 access_by_lua_file '/etc/nginx/conf.d/access.lua';
-                proxy_pass              http://omicx-campaign-planning-3000-service.default.svc.cluster.local:3000/campaign;
+                proxy_pass              http://omicx-campaign-planning-3000-service.omicx-v2-dev.svc.cluster.local:3000/campaign;
        }
 
       location /api {
                 client_max_body_size 100M;
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://web_back_host$request_uri;
       }
       
       location /config {
-              resolver  coredns.kube-system.svc.cluster.local;
+              resolver  kube-dns.kube-system.svc.cluster.local;
               proxy_pass              http://web_back_host;
       }
       
       location /EncryptedAbpUserConfiguration/GetAll {
                 client_max_body_size 100M;
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 proxy_pass              http://web_back_host$request_uri;
         }
         location ~* ^/asm/(.*)$ {
-            resolver  coredns.kube-system.svc.cluster.local;
+            resolver  kube-dns.kube-system.svc.cluster.local;
             access_by_lua_file '/etc/nginx/conf.d/access.lua';
-            proxy_pass              http://omicx-asm-3003-service.default.svc.cluster.local:3003/$1$is_args$args;
+            proxy_pass              http://omicx-asm-3003-service.omicx-v2-dev.svc.cluster.local:3003/$1$is_args$args;
         }
         
         location ~* ^/catalog/(.*)$ {
-            resolver  coredns.kube-system.svc.cluster.local;
+            resolver  kube-dns.kube-system.svc.cluster.local;
             access_by_lua_file '/etc/nginx/conf.d/access.lua';
-            proxy_pass              http://omicx-product-catalog-3005-service.default.svc.cluster.local:3005/$1$is_args$args;
+            proxy_pass              http://omicx-product-catalog-3005-service.omicx-v2-dev.svc.cluster.local:3005/$1$is_args$args;
         }
         
         location ~* ^/tenant-registration/(.*)$ {
-            resolver  coredns.kube-system.svc.cluster.local;
+            resolver  kube-dns.kube-system.svc.cluster.local;
             #access_by_lua_file '/etc/nginx/conf.d/access.lua';
-            proxy_pass              http://omicx-tenant-registration-9755-service.default.svc.cluster.local:9755/$1$is_args$args;
+            proxy_pass              http://omicx-tenant-registration-9755-service.omicx-v2-dev.svc.cluster.local:9755/$1$is_args$args;
         }
 
         location ~* ^/fsapi/(.*)$ {
                 client_max_body_size 100M;
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 access_by_lua_file '/etc/nginx/conf.d/access.lua';
-                proxy_pass          http://omicx-cci-5580-service.default.svc.cluster.local:5580/$1$is_args$args;
+                proxy_pass          http://omicx-cci-5580-service.omicx-v2-dev.svc.cluster.local:5580/$1$is_args$args;
         }
 
         location ~* ^/file/(.*)$ {
@@ -115,83 +115,83 @@ server                  {
         }
 
         location ~*     ^/channelgw/(.*)$ {
-                resolver  coredns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-channel-gateway-6969-service.default.svc.cluster.local:6969/$1$is_args$args;
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-channel-gateway-6969-service.omicx-v2-dev.svc.cluster.local:6969/$1$is_args$args;
         }
 
         #Redash
         location ~*     ^/jobcommon/(.*)$ {
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 access_by_lua_file '/etc/nginx/conf.d/access.lua';
-                proxy_pass              http://omicx-job-common-9703-service.default.svc.cluster.local:9703/$1$is_args$args;
+                proxy_pass              http://omicx-job-common-9703-service.omicx-v2-dev.svc.cluster.local:9703/$1$is_args$args;
         }
         location /zalo/webhook {
-                resolver  coredns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-acd-zalo-connector-6969-service.default.svc.cluster.local:6969/webhook/zalo;
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-acd-zalo-connector-6969-service.omicx-v2-dev.svc.cluster.local:6969/webhook/zalo;
         }
 
         location /facebook/webhook {
-                resolver  coredns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-acd-facebook-connector-7979-service.default.svc.cluster.local:7979/webhook/facebook;
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-acd-facebook-connector-7979-service.omicx-v2-dev.svc.cluster.local:7979/webhook/facebook;
        }
      
         location /api/v1/email/oauth2 {
-                resolver  coredns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-social-configurations-7980-service.default.svc.cluster.local:7980;
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-social-configurations-7980-service.omicx-v2-dev.svc.cluster.local:7980;
         }
         location /api/v1/realtime-chat/ {
-        		resolver  coredns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-chat-statistics-80-service.default.svc.cluster.local:80;
+        		resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-chat-statistics-80-service.omicx-v2-dev.svc.cluster.local:80;
         }
        
        location ~*     ^/public/(.*)$ {
                 client_max_body_size 100M;
-                resolver  coredns.kube-system.svc.cluster.local;
-                proxy_pass http://omicx-cci-5580-service.default.svc.cluster.local:5580/public/$1;
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass http://omicx-cci-5580-service.omicx-v2-dev.svc.cluster.local:5580/public/$1;
         }
 
         location ~*     ^/static/(.*)$ {
         # point to mount folder at nfs.conf
-                resolver  coredns.kube-system.svc.cluster.local;
-                proxy_pass              http://omicx-nginx-7990-service.default.svc.cluster.local:7990/$1$is_args$args;
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-nginx-7990-service.omicx-v2-dev.svc.cluster.local:7990/$1$is_args$args;
         }
         location     /api/tenant/register {
-                resolver  coredns.kube-system.svc.cluster.local;
+                resolver  kube-dns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-tenant-registration-9755-service:9755/$request_uri;
         }
         location ~*     ^/chat-acd/(.*)$ {
-               resolver  coredns.kube-system.svc.cluster.local;
+               resolver  kube-dns.kube-system.svc.cluster.local;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header        Host $host;
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-acd-backend-3006-service.default.svc.cluster.local:3006/$1$is_args$args;
+               proxy_pass              http://omicx-acd-backend-3006-service.omicx-v2-dev.svc.cluster.local:3006/$1$is_args$args;
         }
      
         location ~*     ^/acd-asm-chat/(.*)$ {
-               resolver  coredns.kube-system.svc.cluster.local;
+               resolver  kube-dns.kube-system.svc.cluster.local;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header        Host $host;
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-acd-asm-chat-6970-service.default.svc.cluster.local:6970/$1$is_args$args;
+               proxy_pass              http://omicx-acd-asm-chat-6970-service.omicx-v2-dev.svc.cluster.local:6970/$1$is_args$args;
         }     
         location ~*     ^/acd-asm-email/(.*)$ {
-               resolver  coredns.kube-system.svc.cluster.local;
+               resolver  kube-dns.kube-system.svc.cluster.local;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header        Host $host;
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-acd-asm-email-7990-service.default.svc.cluster.local:7990/$1$is_args$args;
+               proxy_pass              http://omicx-acd-asm-email-7990-service.omicx-v2-dev.svc.cluster.local:7990/$1$is_args$args;
         }
         location ~*     ^/report/(.*)$ {
-               resolver  coredns.kube-system.svc.cluster.local;
+               resolver  kube-dns.kube-system.svc.cluster.local;
 			   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
     		   add_header Referrer-Policy strict-origin-when-cross-origin;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -200,16 +200,16 @@ server                  {
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-autocall-report-80-service.default.svc.cluster.local:80/$1$is_args$args;
+               proxy_pass              http://omicx-autocall-report-80-service.omicx-v2-dev.svc.cluster.local:80/$1$is_args$args;
         }
         location ~*     ^/statistic/(.*)$ {
-               resolver  coredns.kube-system.svc.cluster.local;
+               resolver  kube-dns.kube-system.svc.cluster.local;
                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header        Host $host;
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
                access_by_lua_file '/etc/nginx/conf.d/access.lua';
-               proxy_pass              http://omicx-chat-statistics-80-service.default.svc.cluster.local:80/$1$is_args$args;
+               proxy_pass              http://omicx-chat-statistics-80-service.omicx-v2-dev.svc.cluster.local:80/$1$is_args$args;
         }
 }
