--- a/omicx/resources/tenant-registration/appsettings.json
+++ b/omicx/resources/tenant-registration/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=crm-db; Database=crm.core;User Id=crmdbadmin;Password=OmicxCrm2023;Connection Timeout=60;MultipleActiveResultSets=True"
+    "Default": "Server=crm-db; Database=crm.core;User Id=dbadmin;Password=123456aA@;Connection Timeout=60;MultipleActiveResultSets=True"
   },
   "ConfigurationServer": {
         "Address": "http://localhost:7099"
