--- a/omicx/resources/web-be/appconfig.json
+++ b/omicx/resources/web-be/appconfig.json
@@ -1,22 +1,22 @@
 {
     "project": 0,
-    "remoteServiceBaseUrl": "https://ps1.omicx.vn",
-    "tenantSubscriptionUrl": "https://ps1.omicx.vn/tenant-registration",
-    "appBaseUrl": "https://ps1.omicx.vn",
-    "agentStatusManagementUrl": "https://ps1.omicx.vn/asm",
-    "campaignPlanningUrl": "https://ps1.omicx.vn/campaign-planning",
-    "channelManagerServiceBaseUrl": "https://ps1.omicx.vn/channel-manager",
-    "channelGWBaseUrl": "https://ps1.omicx.vn/channelgw",
-    "reportBaseUrl": "https://ps1.omicx.vn/reporting",
-    "audioUrl": "https://ps1.omicx.vn/static/recording/",
-    "audioSurveyUrl": "https://ps1.omicx.vn/static/survey/",
-    "freeSwitchBackend": "https://ps1.omicx.vn/fsapi",
-    "avatarUrl": "https://ps1.omicx.vn/static/image/",
-    "fileUrl": "https://ps1.omicx.vn/static",
-    "fileExportUrl": "https://ps1.omicx.vn/static/jobfile/",
-  	"fileImportUrl": "https://ps1.omicx.vn/static/files_upload/",
-    "socialUrl": "https://ps1.omicx.vn/static/socials/",
-    "mediaUrl": "https://ps1.omicx.vn",
+    "remoteServiceBaseUrl": "https://crm-dev-v2.metechvn.com",
+    "tenantSubscriptionUrl": "https://crm-dev-v2.metechvn.com/tenant-registration",
+    "appBaseUrl": "https://crm-dev-v2.metechvn.com",
+    "agentStatusManagementUrl": "https://crm-dev-v2.metechvn.com/asm",
+    "campaignPlanningUrl": "https://crm-dev-v2.metechvn.com/campaign-planning",
+    "channelManagerServiceBaseUrl": "https://crm-dev-v2.metechvn.com/channel-manager",
+    "channelGWBaseUrl": "https://crm-dev-v2.metechvn.com/channelgw",
+    "reportBaseUrl": "https://crm-dev-v2.metechvn.com/reporting",
+    "audioUrl": "https://crm-dev-v2.metechvn.com/static/recording/",
+    "audioSurveyUrl": "https://crm-dev-v2.metechvn.com/static/survey/",
+    "freeSwitchBackend": "https://crm-dev-v2.metechvn.com/fsapi",
+    "avatarUrl": "https://crm-dev-v2.metechvn.com/static/image/",
+    "fileUrl": "https://crm-dev-v2.metechvn.com/static",
+    "fileExportUrl": "https://crm-dev-v2.metechvn.com/static/jobfile/",
+  	"fileImportUrl": "https://crm-dev-v2.metechvn.com/static/files_upload/",
+    "socialUrl": "https://crm-dev-v2.metechvn.com/static/socials/",
+    "mediaUrl": "https://crm-dev-v2.metechvn.com",
     "telesaleTransferNumber": "179004",
     "cskhTransferNumber": "179005",
     "outboundSurveyNumber": "40600",
@@ -25,15 +25,15 @@
     "fsSocketServer": "wss://proxy.metechvn.com:7443",
     "fsSipDomain": "voice.metechvn.com",
     "fsSipPort": 5090,
-    "pbxIntegrationUrl": "https://ps1.omicx.vn/fsapi",
-    "productCatalogUrl": "https://ps1.omicx.vn/catalog",
+    "pbxIntegrationUrl": "https://crm-dev-v2.metechvn.com/fsapi",
+    "productCatalogUrl": "https://crm-dev-v2.metechvn.com/catalog",
     "appIdFB": "811725996448810",
     "acdBackendServiceBaseUrl": "http://omicx-acd-backend-3006-service:3006",
     "zaloConnectorlUrl": "http://omicx-acd-zalo-connector-6969-service:6969",
-    "acdAsmUrl": "https://ps1.omicx.vn/acd-asm",
+    "acdAsmUrl": "https://crm-dev-v2.metechvn.com/acd-asm",
     "phoneNumberRegex": "^(0|1|84|\\+84)(\\d{9,12})$",
-    "PrefixAudioUrl": "https://ps1.omicx.vn/file/",
-  	"chatStatisticsUrl": "https://ps1.omicx.vn",
+    "PrefixAudioUrl": "https://crm-dev-v2.metechvn.com/file/",
+  	"chatStatisticsUrl": "https://crm-dev-v2.metechvn.com",
     "tenancy": {
       "multitenancy": true,
       "defaultTenancy": ""
@@ -45,7 +45,7 @@
     },
     "sipJsLogLevel": "error",
     "socketIoConfig": {
-      "url": "https://ps1.omicx.vn",
+      "url": "https://crm-dev-v2.metechvn.com",
       "options": {
         "path": "/socket-server",
         "autoConnect": false,
@@ -56,7 +56,7 @@
       }
     },
     "socketIoCallConfig": {
-      "url": "https://ps1.omicx.vn",
+      "url": "https://crm-dev-v2.metechvn.com",
       "options": {
         "path": "/call-server",
         "autoConnect": false,
