--- a/omicx/resources/nginx/crm-dev.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev.metechvn.com.conf
@@ -6,6 +6,10 @@ upstream web_front_host {
         server omicx-web-fe-80-service.omicx-v2-dev.svc.cluster.local:80 weight=5;
 }
 
+upstream web_front_v2_host {
+        server omicx-frontend-v2-3000-service.omicx-v2-dev.svc.cluster.local:3000 weight=5;
+}
+
 upstream author_service_host  {
         server omicx-authorization-service-21021-service.omicx-v2-dev.svc.cluster.local:21021 weight=5;
 }
@@ -16,6 +20,10 @@ server                  {
         client_max_body_size 100M;
         location / {
                 proxy_pass              http://web_front_host;
+        }
+
+        location /v2 {
+                proxy_pass              http://web_front_v2_host;
         }
 
         location /AbpUserConfiguration {
