add host to serve v2

--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -15,14 +15,10 @@ upstream author_service_host  {
 }
 
 server                  {
-
         listen                          80;
+        server_name crm-dev-v2.metechvn.com www.crm-dev-v2.metechvn.com;
         client_max_body_size 100M;
         location / {
-                proxy_pass              http://web_front_host;
-        }
-
-        location /v2 {
                 proxy_pass              http://web_front_v2_host;
         }
 
