--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -687,9 +687,9 @@ deployments:
         cpu: "1"
         memory: 64Mi
   - name: web-fe
-    image: frontend
+    customImage: docker-registry.metechvn.com/dev/omicx/frontend-v2
     pullPolicy: IfNotPresent
-    tag: 'latest'
+    tag: 'a92eb68a'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
