--- a/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
@@ -177,7 +177,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-acd-asm-chat-6970-service.omicx-v2-dev.svc.cluster.local:6970/$1$is_args$args;
         }     
         location ~*     ^/acd-asm-email/(.*)$ {
