--- a/omicx/resources/authorization-service/log4net.config
+++ b/omicx/resources/authorization-service/log4net.config
@@ -7,10 +7,10 @@
 	</appender>
 	<root>
 		<appender-ref ref="Console" />
-		<level value="INFO" />
+		<level value="DEBUG" />
 	</root>
 	<logger name="AuthorizationService" additivity="false">
-		<level value="INFO" />
+		<level value="DEBUG" />
 		<appender-ref ref="Console" />
 	</logger>
 	<logger name="Microsoft" additivity="false">
