--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -92,7 +92,7 @@ deployments:
     envs:
       secret: {}
       config:
-        BACKEND_URL: http://omicx-authorization-service-21021-service.default.svc.cluster.local:21021/api/Authorization/CheckPermission
+        BACKEND_URL: http://omicx-authorization-service-21021-service.omicx-v2-dev.svc.cluster.local:21021/api/Authorization/CheckPermission
     volumeMounts:
       - mountPath: /home/data
         name: homedata
