--- a/omicx/resources/web-be/appsettings.json
+++ b/omicx/resources/web-be/appsettings.json
@@ -10,7 +10,7 @@
     "FreeSwitchManagerApi": "http://omicx-cci-5580-service:5580",
     "ServerRootAddress": "http://172.16.16.110:21021/",
     "ClientRootAddress": "https://crm-dev-v1.metechvn.com/",
-    "CorsOrigins": "https://crm-dev-v1.metechvn.com,http://localhost:8080,http://localhost:8081,http://localhost:3000",
+    "CorsOrigins": "https://crm-dev-v1.metechvn.com,https://crm-dev-v2.metechvn.com,http://localhost:8080,http://localhost:8081,http://localhost:3000",
     "RootPathChatWidget": "http://172.16.88.109:8080/js/",
     "SocketIO": "http://omicx-socket-server-3000-service:3000/",
     "BootstrapServers": "kafka-0:9092,kafka-1:9092,kafka-2:9092",
