--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -858,7 +858,7 @@ deployments:
   - name: acd-backend
     customImage: docker-registry.metechvn.com/dev/omicx-v2/acd-backend
     pullPolicy: Always
-    tag: 'latest'
+    tag: '66836f1e'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
