add authen for v2

--- a/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v2.metechvn.com.conf
@@ -54,14 +54,14 @@ server                  {
        location /campaign-planning {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+                access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://omicx-campaign-planning-3000-service.omicx-v2-dev.svc.cluster.local:3000/campaign;
        }
 
       location /api {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+                access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://web_back_host$request_uri;
       }
       
@@ -77,26 +77,26 @@ server                  {
         }
         location ~* ^/asm/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
-            #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+            access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-asm-3003-service.omicx-v2-dev.svc.cluster.local:3003/$1$is_args$args;
         }
         
         location ~* ^/catalog/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
-            #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+            access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-product-catalog-3005-service.omicx-v2-dev.svc.cluster.local:3005/$1$is_args$args;
         }
         
         location ~* ^/tenant-registration/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
-            #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+            access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-tenant-registration-9755-service.omicx-v2-dev.svc.cluster.local:9755/$1$is_args$args;
         }
 
         location ~* ^/fsapi/(.*)$ {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+                access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass          http://omicx-cci-5580-service.omicx-v2-dev.svc.cluster.local:5580/$1$is_args$args;
         }
 
@@ -114,7 +114,7 @@ server                  {
         #Redash
         location ~*     ^/jobcommon/(.*)$ {
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+                access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://omicx-job-common-9703-service.omicx-v2-dev.svc.cluster.local:9703/$1$is_args$args;
         }
         location /zalo/webhook {
@@ -158,7 +158,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-acd-backend-3006-service.omicx-v2-dev.svc.cluster.local:3006/$1$is_args$args;
         }
      
@@ -169,7 +169,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-acd-asm-chat-6970-service.omicx-v2-dev.svc.cluster.local:6970/$1$is_args$args;
         }     
         location ~*     ^/acd-asm-email/(.*)$ {
@@ -179,7 +179,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-acd-asm-email-7990-service.omicx-v2-dev.svc.cluster.local:7990/$1$is_args$args;
         }
         location ~*     ^/report/(.*)$ {
@@ -191,7 +191,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-autocall-report-80-service.omicx-v2-dev.svc.cluster.local:80/$1$is_args$args;
         }
         location ~*     ^/statistic/(.*)$ {
@@ -201,7 +201,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-chat-statistics-80-service.omicx-v2-dev.svc.cluster.local:80/$1$is_args$args;
         }
 }
