--- a/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
@@ -62,14 +62,14 @@ server                  {
        location /campaign-planning {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                access_by_lua_file '/etc/nginx/conf.d/access.lua';
+                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://omicx-campaign-planning-3000-service.omicx-v2-dev.svc.cluster.local:3000/campaign;
        }
 
       location /api {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                access_by_lua_file '/etc/nginx/conf.d/access.lua';
+                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://web_back_host$request_uri;
       }
       
@@ -85,26 +85,26 @@ server                  {
         }
         location ~* ^/asm/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
-            access_by_lua_file '/etc/nginx/conf.d/access.lua';
+            #access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-asm-3003-service.omicx-v2-dev.svc.cluster.local:3003/$1$is_args$args;
         }
         
         location ~* ^/catalog/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
-            access_by_lua_file '/etc/nginx/conf.d/access.lua';
+            #access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-product-catalog-3005-service.omicx-v2-dev.svc.cluster.local:3005/$1$is_args$args;
         }
         
         location ~* ^/tenant-registration/(.*)$ {
             resolver  kube-dns.kube-system.svc.cluster.local;
-            access_by_lua_file '/etc/nginx/conf.d/access.lua';
+            #access_by_lua_file '/etc/nginx/conf.d/access.lua';
             proxy_pass              http://omicx-tenant-registration-9755-service.omicx-v2-dev.svc.cluster.local:9755/$1$is_args$args;
         }
 
         location ~* ^/fsapi/(.*)$ {
                 client_max_body_size 100M;
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                access_by_lua_file '/etc/nginx/conf.d/access.lua';
+                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass          http://omicx-cci-5580-service.omicx-v2-dev.svc.cluster.local:5580/$1$is_args$args;
         }
 
@@ -122,7 +122,7 @@ server                  {
         #Redash
         location ~*     ^/jobcommon/(.*)$ {
                 resolver  kube-dns.kube-system.svc.cluster.local;
-                access_by_lua_file '/etc/nginx/conf.d/access.lua';
+                #access_by_lua_file '/etc/nginx/conf.d/access.lua';
                 proxy_pass              http://omicx-job-common-9703-service.omicx-v2-dev.svc.cluster.local:9703/$1$is_args$args;
         }
         location /zalo/webhook {
@@ -166,7 +166,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-acd-backend-3006-service.omicx-v2-dev.svc.cluster.local:3006/$1$is_args$args;
         }
      
@@ -177,7 +177,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-acd-asm-chat-6970-service.omicx-v2-dev.svc.cluster.local:6970/$1$is_args$args;
         }     
         location ~*     ^/acd-asm-email/(.*)$ {
@@ -187,7 +187,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-acd-asm-email-7990-service.omicx-v2-dev.svc.cluster.local:7990/$1$is_args$args;
         }
         location ~*     ^/report/(.*)$ {
@@ -209,7 +209,7 @@ server                  {
                proxy_http_version      1.1;
                proxy_set_header        Upgrade $http_upgrade;
                proxy_set_header        Connection "upgrade";
-               access_by_lua_file '/etc/nginx/conf.d/access.lua';
+               #access_by_lua_file '/etc/nginx/conf.d/access.lua';
                proxy_pass              http://omicx-chat-statistics-80-service.omicx-v2-dev.svc.cluster.local:80/$1$is_args$args;
         }
 }
