--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -992,7 +992,7 @@ deployments:
   - name: call-connector
     customImage: docker-registry.metechvn.com/dev/omicx/call-connector
     pullPolicy: Always
-    tag: "latest"
+    tag: '7a60ce06'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 5
