add call webhook

--- a/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
+++ b/omicx/resources/nginx/crm-dev-v1.metechvn.com.conf
@@ -134,6 +134,11 @@ server                  {
                 resolver  kube-dns.kube-system.svc.cluster.local;
                 proxy_pass              http://omicx-acd-facebook-connector-7979-service.omicx-v2-dev.svc.cluster.local:7979/webhook/facebook;
        }
+
+       location /call/webhook {
+                resolver  kube-dns.kube-system.svc.cluster.local;
+                proxy_pass              http://omicx-call-connector-8080-service.omicx-v2-dev.svc.cluster.local:8080/webhook/call;
+       }
      
         location /api/v1/email/oauth2 {
                 resolver  kube-dns.kube-system.svc.cluster.local;
