--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -717,7 +717,7 @@ deployments:
   - name: frontend-v2
     customImage: docker-registry.metechvn.com/dev/omicx/frontend-v2
     pullPolicy: IfNotPresent
-    tag: "46a1a175"
+    tag: 'ee37dbac'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
