--- a/omicx/values.yaml
+++ b/omicx/values.yaml
@@ -646,7 +646,7 @@ deployments:
   - name: web-be
     customImage: docker-registry.metechvn.com/dev/omicx-v2/backend
     pullPolicy: IfNotPresent
-    tag: "latest"
+    tag: '4ec2e9e6'
     replicaCount: 1
     routePath: /
     initialDelaySeconds: 30
